# kalshi-btc-trader

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  PARAMS.md  bot_launcher.py  config.yaml  dashboard.py  pyproject.toml  requirements.txt  run.py  start_bot.bat
kalshi_trader/: config.py
kalshi_trader/backtest/: engine.py  market_simulator.py  metrics.py
kalshi_trader/dashboard/: cli.py
kalshi_trader/data/: binance.py  database.py  deribit.py  kalshi_client.py  kalshi_mock.py  kalshi_ws.py
kalshi_trader/execution/: order_manager.py  risk.py  trade_logger.py
kalshi_trader/models/: bracket_prob.py  fair_value.py  kelly.py  vol_model.py
kalshi_trader/notifications/: discord.py
kalshi_trader/strategies/: base.py  ensemble.py  funding_rate.py  mean_reversion.py  momentum.py  orderbook_imbalance.py  volatility_regime.py
scripts/: backtest_threshold.py  run_dashboard.bat  run_dashboard.vbs  run_trader.bat  run_trader.vbs  verify_fills.py
