[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "kalshi-btc-trader"
version = "0.1.0"
description = "Algorithmic trading system for Kalshi KXBTC15M binary prediction markets"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "cryptography>=42.0.0",
]

[project.scripts]
kalshi-trader = "kalshi_trader:main"
